grammar.js
        source_file: $ => repeat($._stm),

        _stm: $ => choice(
            $._expression_stm,
            $._declaration_stm
        ),

        empty_stm: $ => ';',

        macro_def: $ => {
            const rules = seq(
                repeat(seq($.macro_rule, ';')),
                optional($.macro_rule)
            )

            return seq('macro_rules!', 
                field('name', $.identifier),
                choice(
                    seq('(', rules, ')', ';'),
                    seq('{', rules, '}')
                )
            )
        },

        macro_rule: $ => seq(
            field('left', alias($.token_tree_mac_rul, $.token_tree)),
            '=>',
            field('right', $.token_tree)
        ),

        token_bind: $ => seq(
            field('name', $.metavariable),
            ':',
            field('type', $.fragment_specifier)
        ),

        fragment_specifier: $ => choice(
            'block', 'expr', 'ident', 'item', 'lifetime', 'path', 'stmt',
            'tt', 'ty', 'vis', 'literal', 'pat', 'meta'
        ),

        _tokens_macro_invoc: $ => choice(
            $.token_tree,       // tokens delimiters (),[],{}
            $.token_rep,        // tokens rep {$A: ty, $B: tx ...}
            $._token_content    // identifier / reserved words
        ),

        token_tree: $ => choice(
            seq('(', repeat($._tokens_macro_invoc), ')'),
            seq('[', repeat($._tokens_macro_invoc), ']'),
            seq('{', repeat($._tokens_macro_invoc), '}')
        ),

        token_rep: $ => seq(
            '$', 
            '(', 
            repeat($._tokens_macro_invoc), 
            ')', 
            optional(/[^+*?]/), 
            choice('+', '*', '?')
        ),

        outer_attribute_item: $ => seq(
            '#', '[', $.meta_item, ']'
        ),

        meta_item: $ => seq(
            $._path,
            optional(choice(
                seq('=', field('variable', $._literal)),
                field('list', $.meta_seq)
            ))
        ),

        const_item: $ => seq(
            optional($.privacy_visibility),
            'const',
            field('name', choice(
                '_',
                $.identifier
            )),
            ':',
            field('type', $._type),
            optional(seq(
                '=',
                field('value', $._expression)
            )),
            ';'
        ),

        function_item: $ => seq(
            optional($.privacy_visibility),
            optional($.function_qualifiers),
            'fn',
            field('name', choice($.identifier, $.metavariable)),
            field('type parameters', optional($.type_parameters)),
            field('parameters', $.parameters),
            optional(seq('->', field('return', $._type))),
            optional($.where_clause),
            field('body', $.block)
        ),

        let_declaration: $ => seq(
            optional($.privacy_visibility),
            'let',
            optional($.mutable_spec),
            field('pattern', $._pattern),
            optional(seq(
                ':', field('type', $._type)
            )),
            optional(seq(
                '=', field('value', $._expression)
            )),
            ';'
        ),

        parameters: $ => seq(
            '(',
            optional(sepRepInstru(',', seq(
                optional($.outer_attribute_item),
                choice(
                    $.parameter,
                    $.self_parameter,
                    '...',
                    '_',
                    $._type
                )
            ))),
            optional(','),
            ')'
        ),

        parameter: $ => seq(
            optional($.mutable_spec),
            field('pattern', choice(
                $._pattern,
                $.self,
                $._reserved_identifier
            )),
            ':',
            field('type', $._type)
        ),

        _type: $ => choice(
            $.abstract_type,                // abstract type
            $.reference_pointer_type,       // reference type
            $.raw_pointer_type,             // pointer type
            $.array_type,                    // array type
            $.function_type,                 // function type
            $.dynamic_type,                 // dynamic type
            $.bounded_type,                 // bounded type
            $.metavariable,
            $._type_identifier,
            $.never_type,
            $.tuple_type,
            $.unit_type,
            $.macro_invoc,
            $.generic_type,
            $.scoped_type_identifier,
            alias(choice(...data_types), $.prim_data_type)
        ),

        bracket_type: $ => seq(
            '<',
            choice(
                $._type,
                $.qualified_type
            ),
            '>'
        ),

        qualified_type: $ => seq(
            field('type', $._type), 'as', field('alias', $._type)
        ),

        generic_function: $ => prec(1, seq(
            field('function', choice(
                $.identifier,
                $.scoped_identifier,
                $.field_access_expression
            )),
            '::',
            field('type arguments', $.type_args)
        )),

        generic_type: $ => prec(1, seq(
            field('type', choice(
                $._type_identifier,
                $.scoped_type_identifier
            )),
            field('type arguments', $.type_args)
        )),

        type_args: $ => seq(
            token(prec(1, '<')),
            sepRepInstru(',', choice(
                $._type,
                $.lifetime,
                $._literal,
                $.bind_type,
                $.block         // block
            )),
            optional(','),
            '>'
        ),

        _expression: $ => choice(
            $._literal, 
            $.return_expression, 
            $.call_expression,  
            $.type_cast_expression, 
            $.range_expression,  
            $.assignment_expression,  
            $.binary_expression,  
            $.question_mark_expression, 
            $.reference_expression, 
            $.unary_expression,     
            prec.left($.identifier),
            prec.left($._reserved_identifier),
            alias(choice(...data_types), $.identifier),
            $.self,
            $.scoped_identifier,
            $.generic_function,
            $.tuple_expression,
            $.struct_expression,
            $.array_expression,
            $.field_access_expression,
            $.await_expression,
            prec(1, $.macro_invoc),
            $.unit_expression,
            $.break_expression,
            $.continue_expression,
            $.index_expression,
            $.metavariable,
            $.closure_expression,
            $.single_parenthesized_expression,
            $._expression_block
        ),

        _expression_block: $ => choice(
            $.if_expression,
            $.if_let_expression,
            $.for_expression,
            $.while_expression,
            $.while_let_expression,
            $.loop_expression,
            $.match_expression,
            $.block,
            $.const_block,
            $.unsafe_block,
            $.async_block
        ),

        macro_invoc: $ => seq(
            field('macro', choice(
                $.identifier,
                $.scoped_identifier     // scoped ident
            )),
            '!',
            $.token_tree
        ),

        scoped_identifier: $ => seq(
            field('path', optional(choice(
                $._path,
                $.bracket_type,
                alias($.generic_type_turbofish, $.generic_type)
            ))),
            '::',
            field('name', $.identifier)
        ),

        scoped_type_identifier: $ => seq(
            field('path', optional(choice(
                $._path,                                            // path
                alias($.generic_type_turbofish, $.generic_type),    // alias generic type with turbofish as generic type
                $.bracket_type,                                     // bracket type
                $.generic_type                                      // generic type
            ))),
            '::',
            field('name', $._type_identifier)
        ),

        range_expression: $ => prec.left(1, choice(
            seq($._expression, choice('..', '...', '..='), $._expression),
            seq($._expression, '..'),
            seq('..', $._expression),
            '..'
        )),

        unary_expression: $ => prec(11, choice(
            seq(
                choice('-', '*', '!'),
                $._expression
            )
        )),

        reference_expression: $ => prec(11, seq(
            '&',
            optional($.mutable_spec),
            field('value', $._expression)
        )),

        question_mark_expression: $ => seq($._expression, '?'),

        binary_expression: $ => {
            const binary_expression_prec = [
                [9, choice('+', '-')], 
                [10, choice('*', '/', '%')], 
                [7, '&'], [5, '|'],
                [6, '^'], [8, choice('<<', '>>')], 
                [4, choice('==', '!=', '<', '>', '<=', '>=')],
                [3, '&&'], [2, '||'],
            ];


            return choice(...binary_expression_prec.map(([precedence, operator]) => prec.left(precedence, seq(
                field('left', $._expression),
                field('operator', operator),
                field('right', $._expression),
            ))));
        },

        assignment_expression: $ => prec.left(0, seq(
            field('left', $._expression),
            field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=')),
            field('right', $._expression)
        )),

        type_cast_expression: $ => seq(
            field('value', $._expression),
            'as',
            field('type', $._type)
        ),

        call_expression: $ => prec(14, seq(
            field('function', $._expression),
            field('arguments', $.func_args)
        )),

        array_expression: $ => seq(
            '[',
            repeat($.outer_attribute_item),
            choice(
                seq(
                    sepRepInstru(',', $._expression),
                    optional(',')
                ),
                seq(
                    $._expression,
                    ';',
                    field('length', $._expression)
                )
            ),
            ']'
        ),

        single_parenthesized_expression: $ => seq(
            '(',
            $._expression,
            ')'
        ),

        tuple_expression: $ => seq(
            '(',
            repeat($.inner_attribute_item),
            seq($._expression, ','),
            repeat(seq($._expression, ',')),
            optional($._expression),
            ')'
        ),

        unit_expression: $ => seq('(', ')'),

        struct_expression: $ => seq(
            field('name', choice(
                $._type_identifier,
                alias($.scoped_type_identifier_expression, $.scoped_type_identifier),
                $.generic_type_turbofish
            )),
            field('body', $.field_struct_list)
        ),

        field_struct_list: $ => seq(
            '{',
            sepRepInstru(',', choice(
                $.shorthand_field,
                $.base_field,
                $.field_norm
            )),
            '}'
        ),

        field_norm: $ => seq(
            repeat($.outer_attribute_item),
            field('name', $.identifier),
            ':',
            field('value', $._expression)
        ),

        base_field: $ => seq(
            '..',
            $._expression
        ),

        shorthand_field: $ => seq(
            repeat($.inner_attribute_item),
            $.identifier
        ),

        if_expression: $ => seq(
            'if',
            field('condition', $._expression),
            field('then', $.block),
            optional(field('else', $.else_expression))
        ),

        if_let_expression: $ => seq(
            'if', 'let',
            field('pattern', $._pattern),
            '=',
            field('value', $._expression),
            field('then', $.block),
            optional(field('else', $.else_expression))
        ),

        match_expression: $ => seq(
            'match',
            field('value', $._expression),
            '{',
            optional(seq(
                repeat($.match_arm),
                alias($.last_match_arm, $.match_arm)
            )),
            '}'
        ),

        match_arm: $ => seq(
            repeat($.outer_attribute_item),
            field('pattern', choice(
                $.macro_invoc,
                $.match_if_expression
            )),
            '=>',
            choice(
                seq(field('value', $._expression), ','),
                field('value', prec(1, $._expression_block))
            )
        ),

        while_expression: $ => seq(
            optional(seq($.loop_label, ':')),
            'while',
            field('condition', $._expression),
            field('body', $.block)
        ),

        while_let_expression: $ => seq(
            optional(seq($.loop_label, ':')),
            'while', 'let',
            field('pattern', $._pattern),
            '=',
            field('value', $._expression),
            field('body', $.block)
        ),

        loop_expression: $ => seq(
            optional(seq($.loop_label, ':')),
            'loop',
            field('body', $.block)
        ),

        for_expression: $ => seq(
            optional(seq($.loop_label, ':')),
            'for',
            field('pattern', $._pattern),
            'in',
            field('value', $._expression),
            field('body', $.block)
        ),

        const_block: $ => seq('const', field('body', $.block)),

        closure_expression: $ => prec(-1, seq(
            optional('move'),
            field('parameters', $.closure_parameters),
            choice(
                seq(field('block', $._expression)),
                seq(
                    optional(seq('->', field('return type', $._type))),
                    field('body', $.block)
                )
            )
        )),

        closure_parameters: $ => seq(
            '|',
            sepRepInstru(',', choice(
                $._pattern,
                $.parameter
            )),
            '|'
        ),

        loop_label: $ => seq('\'', $.identifier),

        break_expression: $ => prec.left(seq('break', optional($.loop_label), optional($._expression))),

        continue_expression: $ => prec.left(seq('continue', optional($.loop_label))),

        index_expression: $ => prec(14, seq(
            $._expression,
            '[', $._expression, ']'
        )),

        unsafe_block: $ => seq('unsafe', $.block),

        block: $ => seq(
            '{',
            repeat($._stm),
            optional($._expression),
            '}'
        ),

        _pattern: $ => choice(
            $._literal_pattern,
            alias(choice(...data_types), $.identifier),
            $.identifier,
            $.scoped_identifier,
            $.tuple_pattern,
            $.tuple_struct_pattern,
            $.struct_pattern,
            $.ref_pattern,
            $.mut_pattern,
            $.range_pattern,
            $.reference_pattern,
            $.capture_pattern,
            $.or_pattern,
            $.rest_field_pattern,
            $.slice_pattern,
            $.const_block,  // const block *
            '_'
        ),

        tuple_pattern: $ => seq(
            '(', optional(sepRepInstru(',', $._pattern)), optional(','), ')'
        ),

        mut_pattern: $ => prec(-1, seq($.mutable_spec, $._pattern)),

        or_pattern: $ => prec.left(-2, seq($._pattern, '|', $._pattern)), 
